[package]
name = "lbin"
version = "0.2.0"
edition = "2018"

[dependencies]
serde_json = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
reqwest = { version = "0.11.4", default-features = false, features = ["json", "gzip", "brotli"] }
base64 = "0.13.0"
hematite-nbt = "0.5.2"
convert_case = "0.4.0"
dashmap = "4.0.2"
hyper = { version = "0.14", default-features = false, features = ["server"] }
tokio = { version = "1.11.0", default-features = false, features = ["macros", "rt-multi-thread"] }
futures = "0.3.17"
